# eliza-archive

./: .gitignore  .gitleaks.toml  AGENTS.md  DESIGN.md  PLACEHOLDER_AUDIT.md  SECURITY.md  WINDOWS.md  biome.json  knip.json  lerna.json  package.json  tsconfig.dist-paths.json  tsconfig.json  turbo.json
.codex/aesthetic-review-2026-05-16/: results.json  sheets.json  summary.json
.codex/aesthetic-review-2026-05-16-cloud-fallback/: results.json  sheets.json  summary.json
.codex/cloud-dashboard-review-2026-05-17/: results.json  summary.json
.github/: dependabot.yml
.github/workflows/: README.md  android-release.yml  apple-store-release.yml  arm-apps-daemon.yml  build-agent-image.yml  build-android.yml  ci.yaml  claude-code-review.yml  claude.yml  cloud-cf-deploy.yml  cloud-deploy-backend.yml  cloud-headscale.yml  cloud-tests.yml  deploy-eliza-provisioning-worker.yml  dev-smoke.yml  docker-ci-smoke.yml  docs-ci.yml  elizaos-cuttlefish.yml  elizaos-openagent-ai-soc.yml  feed-env-audit.yml  gitleaks.yml  (+14 more)
patches/: CHECKSUMS.sha256  llama-cpp-capacitor@0.1.5.patch
plugins/plugin-vision/native/yolo.cpp/: CMakeLists.txt  README.md
plugins/plugin-vision/native/yolo.cpp/include/: yolo.h
plugins/plugin-vision/native/yolo.cpp/scripts/: convert.py
plugins/plugin-vision/native/yolo.cpp/src/: yolo.cpp
scripts/: build-riscv64-artifacts.sh  check-even-research-audit.mjs  check-facewear-consolidation.mjs  check-smartglasses-completion-gate.mjs  consolidate-packages.mjs  eval-prompts.ts  fix-pkg-shared-deps.mjs  nullish-operator-audit.mjs  verify-smartglasses-software.mjs
(+1424 files in other folders)
